12.02. overflow fix

--- a/tim_1/gameA.css
+++ b/tim_1/gameA.css
@@ -3,6 +3,10 @@
     font-family: cv;
 }
 
+html{
+    overflow: hidden;
+}
+
 body {
     color: #ffffff;
     background-color:#000000;
